# solvespace

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
purescript/: CMakeLists.txt  spago.dhall  zephyr.bash
purescript/src/: Plugin.purs  PluginLoader.purs  Server.purs  ServerApp.purs  serverapp.cpp  serverapp.lnk
purescript/src/Glib/: Module.purs  glib-module.cpp  glib-module.lnk
purescript/src/Network/: GioTcpServer.purs  network-giotcpserver.cpp  network-giotcpserver.lnk
purescript/src/Posix/: Dlfcn.purs  posix-dlfcn.cpp  posix-dlfcn.lnk
purescript/src/Solvespace/: IdList.purs  Resources.purs  solvespace-idlist.cpp  solvespace-resources.cpp
src/: CMakeLists.txt  generate.cpp  solvespace.cpp  solvespace.h
src/platform/: entrygui.cpp
